# markitdown-fastapi

./: .gitignore  Dockerfile  Justfile  README.md  pyproject.toml
.github/workflows/: build-push.yml
app/: __main__.py
app/middleware/: logging.py
