[project]
name = "MarkItDown-FastAPI"
version = "0.1.0"
description = "A FastAPI application that uses MarkItDown to convert web pages to markdown and then uses OpenAI to clean up the text."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.131.0",
    "markitdown>=0.1.5",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
]

[tool.ruff]
line-length = 127

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
